# GraphType

./: CMakeLists.txt  header.h  implementation.cpp  main.cpp
